Set HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK to true

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: homebrew & fastlane
-        run: export HOMEBREW_NO_INSTALL_CLEANUP=TRUE && /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)" && brew update && brew install fastlane
+        run: export HOMEBREW_NO_INSTALL_CLEANUP=TRUE && export HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=TRUE && /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)" && brew update && brew install fastlane
 
       - name: Cocoapods cache
         uses: actions/cache@v3
