--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   test-and-release:
     # Clone of main test workflow
-    runs-on: macos-13-xlarge
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
