--- a/.github/workflows/release-cocoapods.yml
+++ b/.github/workflows/release-cocoapods.yml
@@ -9,14 +9,14 @@ env:
 
 jobs:
   release-cocoapods:
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Ruby & Bundle setup
-        uses: ruby/setup-ruby@v1
+        uses: ruby/setup-ruby@v1.176.0
         with:
           ruby-version: 2.7
           bundler-cache: true
