--- a/.github/workflows/release-cocoapods.yml
+++ b/.github/workflows/release-cocoapods.yml
@@ -5,15 +5,15 @@ on:
     types: [ published ]
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_14.2.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode.app/Contents/Developer
 
 jobs:
   release-cocoapods:
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Ruby & Bundle setup
         uses: ruby/setup-ruby@v1
