--- a/CriteoAdViewer/Podfile
+++ b/CriteoAdViewer/Podfile
@@ -1,13 +1,12 @@
-platform :ios, '10.0'
+platform :ios, '13.0'
 
 workspace 'CriteoAdViewer'
 
 target 'CriteoAdViewer' do
   project 'CriteoAdViewer'
 
-  pod 'CriteoPublisherSdk', '~> 4.3.0-rc1'
+  pod 'CriteoPublisherSdk', '~> 6.1.2'
   # pod 'CriteoPublisherSdk', :git => 'https://github.com/criteo/ios-publisher-sdk.git' #, :branch => ''
-  pod 'mopub-ios-sdk/Core'
   pod 'Google-Mobile-Ads-SDK'
   pod 'Eureka'
 end
